name:                sde-solver

version:             0.1.0.0
synopsis:            Distributed SDE solver
description:         
  This package contains utilities for solving SDE instances in various ways.
  Basically a SDE instance is solved using some SDESolver working with some distribution mechanism.
  Results are gathered at the end point of the specified interval.
  .
  Included in the package are ways of doing distributed calculations over a MPI cluster,
  or optionally only using the local solver with built in parallelization.
  Two examples are given in the Numer.DSDE.SDE module; geometric brownian motion and the Langevin equation.
  See the haddock documentation of the DSDE module for examples.
  .
  The main interface is accessible through Numeric.DSDE which provides various way of solving generic problems.
  This module supports either local or distributed calculations in the IO monad and gathering the results as a distribution.
  .
  Internally there are several abstractions used when dealing with each component building up a solution.
  Given some SDE and SDESolver instances, it is also required to some have PRNG providing normally distributed numbers.
  This has been implemented over some specific monads and only results of type Double.
  All of the internal components are written with polymorphism in mind, acting over some monad instance and generic result types in all cases.

homepage:            https://github.com/davnils/sde-solver

license:             BSD3
license-file:        LICENSE

author:              David Nilsson
maintainer:          nilsson.dd+code@gmail.com

category:            Numerical
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Numeric.DSDE, Numeric.DSDE.Distribute, Numeric.DSDE.SDESolver, Numeric.DSDE.RNG, Numeric.DSDE.SDE.GeometricBrownian, Numeric.DSDE.SDE.Langevin, Numeric.DSDE.SDE
  
  build-depends:
    base >=4.5 && < 5,
    vector >=0.10 && < 1,
    mtl >=2.1 && < 3,
    monad-parallel >=0.7 && < 1,
    haskell-mpi >=1.2 && < 2,
    cereal >=0.3 && < 1,
    cereal-vector >=0.2 && < 1,
    ghc-prim >=0.2 && < 1,
    mwc-random >=0.12 && < 1,
    random >=1.0.1.1 && < 2
  
  hs-source-dirs:      src


source-repository head
  type: git
  location: git://github.com/davnils/sde-solver
